<?xml version="1.0"?>
<package>
  <name>bebop_vservo</name>
  <version>0.1.0</version>
  <description>Image based visual servo package for Parrot Bebop</description>
  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/bebop_vservo</url> -->

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_visp</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>bebop_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vision_visp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>visp</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
